--- a/Ferovi.csproj
+++ b/Ferovi.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <Folder Include="Automapper\" />
+    <Folder Include="Models\Services\Interfaces\" />
   </ItemGroup>
 
   <ItemGroup>
